# uwo-helper

./: .gitignore  Readme.md  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-05-06-uwo-trade-bot-m0-m1.md  2026-05-06-uwo-trade-bot-m2.md  2026-05-06-uwo-trade-bot-m3.md
docs/superpowers/specs/: 2026-05-06-uwo-trade-bot-design.md  2026-05-06-uwo-trade-bot-postmessage-spike.md
scripts/: auto_smoke.py  run.bat  run.ps1  spike_postmessage.py
src/uwo_helper/: __init__.py  app.py  hotkeys.py  ocr.py  screenshot.py  storage.py
src/uwo_helper/core/: __init__.py  db.py  models.py  parse.py  recommend.py  settings.py
src/uwo_helper/infra/: __init__.py  input_backend.py  ocr_engine.py  screenshot.py  window.py
src/uwo_helper/ui/: main_window.py  ocr_review.py  theme.py
src/uwo_helper/ui/pages/: __init__.py  input_debug.py  price_book.py  recommend.py  workbench.py
tests/core/: conftest.py  test_db.py  test_parse.py  test_recommend.py
tests/infra/: test_input_backend.py  test_input_postmessage_smoke.py  test_ocr_smoke.py  test_screenshot_smoke.py
