[project]
name = "uwo-helper"
version = "0.1.0"
description = "Local screenshot, OCR review, and trade planning helper for UWO."
requires-python = ">=3.10"
dependencies = [
]

[project.optional-dependencies]
ocr = []

[project.scripts]
uwo-helper = "uwo_helper.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
