[project]
name = "uwo-helper"
version = "0.1.0"
description = "Local trade-route recommender and (later) automation helper for UWO."
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6,<7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
spike = ["pywin32>=306"]
ocr = ["paddlepaddle>=2.6", "paddleocr>=2.7", "mss>=9.0"]

[project.scripts]
uwo-helper = "uwo_helper.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not manual'"
markers = [
    "manual: tests that touch real OS resources; skipped in normal runs",
]
